# vision-commerce-demo

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
analysis/: generate_masks.ipynb  inpaint_backgrounds.ipynb  score_images.ipynb
analysis/scoring/: pool_a_177_images.xlsx  pool_b_300_images.xlsx
avm/: streamlit.py  utils.py
avm/inpaint/: __init__.py  config.py  flux1.py  inpaint.py  preprocessing.py  prompts.py  types.py
avm/inpainting/: config.py  flux1.py  huggingface.py  inpaint.py
avm/score/: __init__.py  config.py  dinov2.py  prompts.py  score.py  types.py
avm/segment/: __init__.py  config.py  preprocessing.py  sam3.py  segment.py  types.py
evaluation/: requirements.txt
inpainting/evaluation/: README.md  batch_inference.py  eval_output.py  prompts.py
inpainting/results/: comparison.json
inpainting/train/: README.md  train_dreambooth_inpaint_lora_flux.py
lib/: streamlit.py  utils.py
lib/inpaint/: config.py  flux1.py  huggingface.py  inpaint.py  preprocessing.py  prompts.py  types.py
lib/score/: __init__.py  dinov2.py  prompts.py
lib/segment/: __init__.py  segment.py
scoring/: pool_a_177_images.xlsx  score_qwen2-VL-2B.py  score_qwen3-VL-8B.py  stage2_agreement_and_split.ipynb
scoring/eda_bg60k_ecommerce118k/: bg60k_eda.ipynb
scoring/label_generation_gemma_sealion/: vlm_scores_sealion_bg60k2600_labels.csv  vlm_scores_sealion_ecom2500_labels.csv
scoring/scoring_validation_llm_judges/: score_gemma-sea-lion-v4-27B.py  (+2 more)
segmentation/: sam3_threshold_tuning.ipynb  threshold_tuning_csv.csv
(+21 files in other folders)
