[project]
name = "avm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "mflux>=0.12.1",
    "sentencepiece>=0.2.1",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.41,<5",
]
